refactor: Remove space